src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>GWBase__Campaign_Sub_Type__c</fullName>
        <inlineHelpText>Specific campaign categories associated with general campaign types</inlineHelpText>
        <label>Campaign Sub-Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email to Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lobby Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting with Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoned Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Donation_Page_URL__c</fullName>
        <formula>HYPERLINK(&apos;/apex/cmpgn?Id&apos; , &apos;Donation Page&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donation Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Effective_Number_Sent__c</fullName>
        <description>If user enters a number sent, it&apos;ll use that - otherwise, defaults to total contacts + leads</description>
        <formula>IF (  NumberSent &gt; 0 , NumberSent ,  NumberOfContacts +  NumberOfLeads )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Number Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Engagement_Level_Numeric__c</fullName>
        <formula>VALUE(LEFT(TEXT( GWBase__Leadership_Level__c ),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Engagement Level Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GWBase__Leadership_Level__c</fullName>
        <inlineHelpText>Level of leadership: 1-organizing, 2-consistent leader, 3-inconsistent leader, 4-activist, 5-donor/member</inlineHelpText>
        <label>Campaign Engagement Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Observing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Following</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Endorsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Contributing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Owning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Leading</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Net_Revenue__c</fullName>
        <description>Total $ won minus costs</description>
        <formula>AmountWonOpportunities  -  ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Parent_Campaign_Group__c</fullName>
        <formula>IF (  ParentId=&quot;&quot; ,  Name ,  Parent.Name )</formula>
        <label>Parent Campaign Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__Parent_Campaign_Start_Date__c</fullName>
        <description>if campaign has a parent, start date of it, otherwise start date of this</description>
        <formula>IF ( ParentId=&quot;&quot; ,   StartDate , Parent.StartDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Won_Percent__c</fullName>
        <formula>IF ( GWBase__Effective_Number_Sent__c &gt; 0 , NumberOfWonOpportunities /   GWBase__Effective_Number_Sent__c  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What percent of recipients gave money in response to campaign?</inlineHelpText>
        <label>$ Won Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GWCC__Unconverted_Leads__c</fullName>
        <formula>NumberOfLeads - NumberOfConvertedLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Leads that have not been converted into contacts.</inlineHelpText>
        <label>Open Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>GWBase__All_With_Engagement_Level</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>GWBase__Leadership_Level__c</columns>
        <columns>GWBase__Engagement_Level_Numeric__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GWBase__Leadership_Level__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All With Engagement Level</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
</CustomObject>